--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "filament/filament": "^3.2",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "mokhosh/filament-kanban": "^2.7"
+        "mokhosh/filament-kanban": "^2.7",
+        "saade/filament-fullcalendar": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
