--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "mokhosh/filament-kanban": "^2.7",
+        "pusher/pusher-php-server": "^7.2",
         "saade/filament-fullcalendar": "^3.0"
     },
     "require-dev": {
