--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": "^8.2",
         "althinect/filament-spatie-roles-permissions": "^2.2",
+        "barryvdh/laravel-dompdf": "^3.0",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "mokhosh/filament-kanban": "^2.7",
+        "mpdf/mpdf": "^8.2",
         "pusher/pusher-php-server": "^7.2",
         "saade/filament-fullcalendar": "^3.0"
     },
