--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "filament/filament": "^3.2",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "mokhosh/filament-kanban": "^2.7",
         "mpdf/mpdf": "^8.2",
         "pusher/pusher-php-server": "^7.2",
