--- a/.env.example
+++ b/.env.example
@@ -19,14 +19,14 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
+DB_CONNECTION=mysql
+# DB_HOST=mysql
 # DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+# DB_DATABASE=project-hris
+# DB_USERNAME=sail
+# DB_PASSWORD=password
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
